--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,8 +4,9 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #f5fafd;
-  overflow: hidden;
+  background-color: #8f9dec;
+  overflow-x: hidden;
+  
 }
 
 a {
@@ -17,45 +18,4 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
-}
-header{
-  position: sticky;
-  top: 0;
-  z-index: 10;
-}
-.nav{
-  display: flex;
-  padding: 16px;
-  justify-content: space-between;
-  align-items: center;
-}
-.nav__menu-list{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  column-gap: 24px;
-}
-.nav__link{
-  font-size: 16px;
-  position: relative;
-}
-.nav__link::before{
-  content: '';
-  position: absolute;
-  width: 0%;
-  bottom: -16px;
-  height: 6px;
-  transition: all 0.2s;
-  background-color: black;
-}
-.nav__link:hover::before{
-  width: 100%;
-}
+
