Mudando a cor do background do body ao clica no menu

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,6 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #8f9dec;
   overflow-x: hidden;
   
 }
@@ -17,5 +16,8 @@ a {
 * {
   box-sizing: border-box;
 }
-
+.bodyIsVisible{
+  background-color: #8f9dec;
+  
+}
 
